syntax="proto3";

option go_package = ".;proto";

// this will be package of the generated code
package proto;

// Message structure
message UserRequest {
    // Field number 1-15 use 1 byte, while field 16th - 2047th use 2 bytes
    // So, the first 15 fields should be reserved for fields that are used oftenly
    string id = 1;
}

message User {
    string applicantId = 1;
    string compCode = 2;
    string appDate = 3;
    string thName = 4;
    string thSurname = 5;
    string thNickname = 6;
    string postionId = 7;
    string postionId2 = 8;
    string positionLevel = 9;
    string citizenId = 10;
    string idIssure = 11;
    string idExp = 12;
    string race = 13;
    string nationality = 14;
    string religion = 15;
    string preId = 16;
    string engName = 17;
    string engSurname = 18;
    string birthday = 19;
    string birthplace = 20;
    string timeBirth = 21;
    string weight = 22;
    string tall = 23;
    string hopeSalary = 24;
    string homeBirth1 = 25;
    string homeBirth = 26;
    string tambolBirth = 27;
    string amphurBirth = 28;
    string provinceBirth = 29;
    string homeTel = 30;
    string homeCur1 = 31;
    string homeCur = 32;
    string tambolCur = 33;
    string amphurCur = 34;
    string provinceCur = 35;
    string mobile = 36;
    string email = 37;
    string im = 38;
    string proxy = 39;
    string blood = 40;
    int32 interviewStatus = 41;
    int32 gettingId = 42;
    int32 contractStatus = 43;
    string cancel = 44;
    string deptId = 45;
    string sectId = 46;
    string branchId = 47;
    string comId = 48;
    string depId = 49;
    string sectionId = 50;
    string sideId = 51;
    string divisionId = 52;
    string statusWork = 53;
    string proPass = 54;
    int32 satStop = 55;
    int32 dayStop = 56;
    string empPayGroup = 57;
    int32 emphasizeTime = 58;
    int32 timeScan = 59;
    string contractId = 60;
    int32 satPrice = 61;
    string moveDate = 62;
    string bossId = 63;
    int32 empType = 64;
    string confPayType = 65;
    string typeShift = 66;
    string postStatus = 67;
    string rcApplyDocumentNo = 68;
    string rcApplicantId = 69;
    int32 statusCertificate = 70;
    int32 contactList = 71;
    string imageProfile = 72;
}

service UserService {
    // unary
    // GetProfile has a method, which is get profile user
    rpc GetProfile (UserRequest) returns (User);
}